--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "livewire/livewire": "^2.5",
         "mikechip/chatapi": "^2.0",
         "mxl/laravel-job": "^1.2",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
